<resources>
    <string name="app_name">Rugby Score Counter</string>
    <string name="first_team_name">Team A</string>
    <string name="second_team_name">Team B</string>
    <string name="first_button">TRY</string>
    <string name="second_button">CONVERSION</string>
    <string name="third_button">PENALTY</string>
    <string name="fourth_button">DROP GOAL</string>
    <string name="reset_button">RESET</string>
</resources>
