<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:contentDescription="@string/app_name"
            android:scaleType="centerCrop"
            android:src="@drawable/rugbypng" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_above="@+id/button"
                android:baselineAligned="false"
                android:orientation="horizontal">


                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="20dp"
                        android:fontFamily="sans-serif-medium"
                        android:gravity="center_horizontal"
                        android:padding="14dp"
                        android:text="@string/first_team_name"
                        android:textColor="@color/primary_text_color"
                        android:textSize="30sp" />

                    <TextView
                        android:id="@+id/team_a_score"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="18dp"
                        android:layout_marginLeft="64dp"
                        android:background="#331b5e20"
                        android:fontFamily="sans-serif-light"
                        android:gravity="center_horizontal"
                        android:padding="5dp"
                        android:paddingBottom="24dp"
                        android:text="0"
                        android:textColor="@color/secondary_text_color"
                        android:textSize="56sp" />

                    <Button
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="8dp"
                        android:layout_marginLeft="24dp"
                        android:layout_marginRight="20dp"
                        android:onClick="AddFiveForTeamA"
                        android:text="@string/first_button"
                        android:textColor="@color/button_text_color" />

                    <Button
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="8dp"
                        android:layout_marginLeft="24dp"
                        android:layout_marginRight="20dp"
                        android:onClick="AddTwoForTeamA"
                        android:text="@string/second_button"
                        android:textColor="@color/button_text_color" />

                    <Button
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="8dp"
                        android:layout_marginLeft="24dp"
                        android:layout_marginRight="20dp"
                        android:onClick="AddThreeForTeamA"
                        android:text="@string/third_button"
                        android:textColor="@color/button_text_color" />

                    <Button
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="8dp"
                        android:layout_marginLeft="24dp"
                        android:layout_marginRight="20dp"
                        android:onClick="AddThreeForTeamA"
                        android:text="@string/fourth_button"
                        android:textColor="@color/button_text_color" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="20dp"
                        android:fontFamily="sans-serif-medium"
                        android:gravity="center_horizontal"
                        android:padding="14dp"
                        android:text="@string/second_team_name"
                        android:textColor="@color/primary_text_color"
                        android:textSize="30sp" />

                    <TextView
                        android:id="@+id/team_b_score"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="18dp"
                        android:layout_marginRight="64dp"
                        android:background="#331b5e20"
                        android:fontFamily="sans-serif-light"
                        android:gravity="center_horizontal"
                        android:padding="5dp"
                        android:paddingBottom="24dp"
                        android:text="0"
                        android:textColor="@color/secondary_text_color"
                        android:textSize="56sp" />

                    <Button
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="8dp"
                        android:layout_marginLeft="20dp"
                        android:layout_marginRight="24dp"
                        android:onClick="AddFiveForTeamB"
                        android:text="@string/first_button"
                        android:textColor="@color/button_text_color" />

                    <Button
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="8dp"
                        android:layout_marginLeft="20dp"
                        android:layout_marginRight="24dp"
                        android:onClick="AddTwoForTeamB"
                        android:text="@string/second_button"
                        android:textColor="@color/button_text_color" />

                    <Button
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="8dp"
                        android:layout_marginLeft="20dp"
                        android:layout_marginRight="24dp"
                        android:onClick="AddThreeForTeamB"
                        android:text="@string/third_button"
                        android:textColor="@color/button_text_color" />

                    <Button
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="8dp"
                        android:layout_marginLeft="20dp"
                        android:layout_marginRight="24dp"
                        android:onClick="AddThreeForTeamB"
                        android:text="@string/fourth_button"
                        android:textColor="@color/button_text_color" />

                </LinearLayout>
            </LinearLayout>

            <Button
                android:id="@+id/button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="8dp"
                android:layout_marginLeft="22dp"
                android:layout_marginRight="22dp"
                android:onClick="ResetScore"
                android:text="@string/reset_button"
                android:textColor="@color/button_text_color" />

        </RelativeLayout>
    </FrameLayout>
</ScrollView>

